k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joluc-de
  namespace: default
  labels:
    app: joluc-de
spec:
  selector:
    app: joluc-de
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
